; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/xenbus/extr_xenbus_client.c_xenbus_alloc_evtchn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/xenbus/extr_xenbus_client.c_xenbus_alloc_evtchn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenbus_device = type { i32 }
%struct.evtchn_alloc_unbound = type { i32, i32, i32 }

@DOMID_SELF = common dso_local global i32 0, align 4
@EVTCHNOP_alloc_unbound = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"allocating event channel\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xenbus_alloc_evtchn(%struct.xenbus_device* %0, i32* %1) #0 {
  %3 = alloca %struct.xenbus_device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.evtchn_alloc_unbound, align 4
  %6 = alloca i32, align 4
  store %struct.xenbus_device* %0, %struct.xenbus_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @DOMID_SELF, align 4
  %8 = getelementptr inbounds %struct.evtchn_alloc_unbound, %struct.evtchn_alloc_unbound* %5, i32 0, i32 2
  store i32 %7, i32* %8, align 4
  %9 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %10 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds %struct.evtchn_alloc_unbound, %struct.evtchn_alloc_unbound* %5, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @EVTCHNOP_alloc_unbound, align 4
  %14 = call i32 @HYPERVISOR_event_channel_op(i32 %13, %struct.evtchn_alloc_unbound* %5)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @xenbus_dev_fatal(%struct.xenbus_device* %18, i32 %19, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %25

21:                                               ; preds = %2
  %22 = getelementptr inbounds %struct.evtchn_alloc_unbound, %struct.evtchn_alloc_unbound* %5, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %4, align 8
  store i32 %23, i32* %24, align 4
  br label %25

25:                                               ; preds = %21, %17
  %26 = load i32, i32* %6, align 4
  ret i32 %26
}

declare dso_local i32 @HYPERVISOR_event_channel_op(i32, %struct.evtchn_alloc_unbound*) #1

declare dso_local i32 @xenbus_dev_fatal(%struct.xenbus_device*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
